[tool.poetry]
name = "repl_pygame_Target-Blaster"
version = "0.2.0"
description = ""
authors = ["corbinredd <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
